Open the `com.sun.tools.javac.file` module